# MyneBooks

./: .gitignore  Cargo.toml  README.md  config.toml.sample
locales/: en-GB.yml  pt-rBR.yml
src/: handler.rs  language.rs  lib.rs  main.rs
src/database/: client.rs  mod.rs
src/database/tables/: group.rs  mod.rs  user.rs
src/handlers/: about.rs  start.rs
src/utils/: keyboard.rs  mod.rs
